z-index error correction

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .bg {
     opacity: 0.4;
+    z-index: -1;
     position: absolute;
     left: 0;
     top: 0;
